openshift/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: picture-store-api-service
  labels:
    app: picture-store-api
spec:
  selector:
    app: picture-store-api
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: picture-store-api-route
  labels:
    app: picture-store-api
spec:
  to:
    kind: Service
    name: picture-store-api-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
